src/components/Style.css
/* ... */
.dot-pulse::after {
  left: -6px;
}
.dot-pulse::before {
  right: -6px;
}
.dot-pulse::before,
.dot-pulse::after {
  content: "";
  display: inline-block;
  position: absolute;
  top: 0;
  width: 3px;
  height: 3px;
  border-radius: 5px;
  background-color: #9880ff;
  color: #9880ff;
}
.dot-pulse::before {
  box-shadow: 9984px 0 0 -5px;
  animation: dot-pulse-before 1.5s infinite linear;
  animation-delay: 0s;
}
.dot-pulse::after {
  box-shadow: 10014px 0 0 -5px;
  animation: dot-pulse-after 1.5s infinite linear;
  animation-delay: 0.5s;
}

@keyframes dot-pulse-before {
  0% {
    box-shadow: 9984px 0 0 -5px;
  }
  30% {
    box-shadow: 9984px 0 0 2px;
  }
  60%,
  100% {
    box-shadow: 9984px 0 0 -5px;
  }
}
@keyframes dot-pulse {
  0% {
    box-shadow: 9999px 0 0 -5px;
  }
  30% {
    box-shadow: 9999px 0 0 2px;
  }
  60%,
  100% {
    box-shadow: 9999px 0 0 -5px;
  }
}
@keyframes dot-pulse-after {
  0% {
    box-shadow: 10014px 0 0 -5px;
  }
  30% {
    box-shadow: 10014px 0 0 2px;
  }
  60%,
  100% {
    box-shadow: 10014px 0 0 -5px;
  }
}

/* Navbar */
.nav-link {
  position: relative;
  color: #9ca3af; /* text-neutral-400 */
  transition: color 0.3s ease-in-out;
}

.nav-link.active {
  color: white;
}

.textarea {
  resize: none;
}

.nav-link::after {
  content: "";
  position: absolute;
  width: 0%;
  height: 2px;
  bottom: -2px;
  left: 50%;
  background-color: white;
  transition: width 0.3s ease-in-out, left 0.3s ease-in-out;
}

.nav-icon.active {
  border-radius: 50%;
  border: 1.3px solid rgb(34, 34, 34);
}
.nav-icon {
  scale: 1;
  border-radius: 50%;
  border: 1.3px solid transparent;
  transition: 0.3s ease-in-out;
}
.nav-icon:hover {
  scale: 1.1;
  transition: 0.3s ease-in-out;
}

.nav-link:hover::after {
  width: 100%;
  left: 0;
}

.nav-link:hover {
  color: white;
}

.nav-bottom-link:hover {
  color: white;
}

/* Home Page */
.inter-font-style-1 {
  font-family: "Inter", sans-serif;
  font-optical-sizing: auto;
  font-weight: 700;
  font-style: normal;
  font-variation-settings: "slnt" 0;
  font-feature-settings: "liga" 1, "calt" 1;
}
.inter-font-style-2 {
  color: darkgray;
}

.Red-Gradient {
  background-image: radial-gradient(closest-side, #e93f3f, black);
  min-width: 798px;
  min-height: 478px;
  position: absolute;
  opacity: 35%;
}
.Blue-Gradient {
  background-image: radial-gradient(closest-side, #3f64e9, black);
  margin-left: -500px;
  min-width: 698px;
  min-height: 378px;
  position: absolute;
  opacity: 35%;
}
.Yellow-Gradient {
  background-image: radial-gradient(closest-side, #ffb800, black);
  margin-right: -500px;
  min-width: 698px;
  min-height: 378px;
  position: absolute;
  opacity: 35%;
}

.Nav_Links li,
img {
  cursor: pointer;
}

/* Footer Gradients */
.Red-Gradient2 {
  background: linear-gradient(to right, #3f64e9, #e93f3f, #ffb800);
  background-image: radial-gradient(closest-side, #e93f3f, black);
  min-width: 798px;
  min-height: 478px;
  position: absolute;
  opacity: 35%;
}
.Blue-Gradient2 {
  background-image: radial-gradient(closest-side, #3f64e9, black);
  margin-right: -500px;
  min-width: 698px;
  min-height: 378px;
  position: absolute;
  opacity: 35%;
}
.Yellow-Gradient2 {
  background-image: radial-gradient(closest-side, #ffb800, black);
  margin-left: -500px;
  min-width: 698px;
  min-height: 378px;
  position: absolute;
  opacity: 35%;
}

.Footer_Links li {
  cursor: pointer;
}

/* Button Hover Animation */
.Button .Arrow {
  margin-left: 2px;
  transition: 0.3s;
}
.Button:hover .Arrow {
  margin-left: 6px;
  transition: 0.3s;
  color: rgb(0, 119, 238);
}

/* About Page */
.About-Page-Connections b {
  color: white;
  font-weight: 500;
  text-decoration: underline;
}

/* Scroll Behavior */

/* Add this CSS to your Style.css file */

/* Customize scrollbar for webkit browsers */
::-webkit-scrollbar {
  width: 2px; /* Slim scrollbar width */
}

::-webkit-scrollbar-thumb {
  background-color: #a3a3a3; /* Color of the scrollbar thumb */
  border-radius: 10px; /* Rounded edges for the scrollbar thumb */
}

::-webkit-scrollbar-track {
  background-color: transparent; /* Optional: background color of the track */
}

/* Customize scrollbar for other browsers */
.scroll-container {
  scrollbar-width: 2px; /* Slim scrollbar width for Firefox */
  scrollbar-color: #a3a3a3 transparent; /* Color of the scrollbar thumb and track for Firefox */
}

/* Animation To Hide Success and Failure Message */
/* Add this to your CSS file or inside a <style> tag in your component */
@keyframes fadeOut {
  from {
    opacity: 1;
  }
  to {
    opacity: 0;
  }
}

.fade-out {
  animation: fadeOut 0.8s forwards;
}
/* ... */

